# software_limpio

./: .gitignore  .pre-commit-config.yaml.example  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SESION.md  pyproject.toml
.claude/: settings.json
.claude/commands/: guardar-sesion.md  pr.md  resume.md  sesion.md
.claude/hooks/: check-session-start.sh  save-session.sh
.dev/: CLAUDE.md  README.md  SESION.md
.dev/plan/: plan_proyecto.md
.github/scripts/: sync_wiki.py
.github/workflows/: sync-wiki.yml
agentes/: README.md  especificacion_agentes_calidad.md
configs/: architectanalyst.yml  codeguard.yml  designreviewer.yml
docs/agentes/: MANTENIMIENTO_CODEGUARD.md  README.md  ajuste_documentacion.md  analisis_impacto_arquitectura_modular.md  arquitectura_modular.md  decision_arquitectura_checks_modulares.md  especificacion_agentes_calidad.md  guia_implementacion_agentes.md
docs/curso/: foda.md  planificacion.md  propuesta-empresas.md
docs/guias/: README.md  adopcion-architectanalyst.md  adopcion-codeguard.md  adopcion-designreviewer.md  architectanalyst.md  codeguard.md  designreviewer.md
docs/metricas/: Metricas_Clasificadas.md  README.md  catalogo_general.md  metricas_arquitectura.md
docs/teoria/: GUIA_REDACCION.md  README.md
docs/teoria/fundamentos/: 01_modularidad.md  02_ocultamiento_informacion.md  03_cohesion.md  04_acoplamiento.md  05_separacion_concerns.md  06_abstraccion.md  README.md
docs/teoria/marco_filosofico/: README.md  antifragilidad.md  cuatro_virtudes.md  sistemas_complejos.md
docs/teoria/nuevo_paradigma/: README.md  rol_profesional.md  triangulo_competencias.md
docs/teoria/trilogia_limpia/: README.md  arquitectura_limpia.md  codigo_limpio.md  diseno_limpio.md
ejemplos/: README.md
examples/sample_project/: .pre-commit-config.yaml  README.md  demo.sh  pyproject.toml
examples/sample_project/src/: __init__.py  calculator.py  imports_and_types.py  security_issues.py  style_issues.py
examples/sample_project/tests/: __init__.py  test_calculator.py
gestion/: README.md  backlog.md
gestion/design-reviewer/: README.md
gestion/design-reviewer/fase-4-code-smells-solid/: ticket-4.1-catalogo-smells.md
gestion/releases/: v0.1.0-plan.md  v0.2.0-plan.md  v0.3.0-plan.md
metricas/: arquitectura.md  codigo.md  diseno.md  metricas_codigo.md  metricas_diseno.md
packaging/: DISTRIBUTION.md  QUICKSTART.md  README.md  RESUMEN.md  build.sh  publish.sh
plan/: plan_proyecto.md
plan/mejoras/: incremento-1-fundamentos.md  incremento-2-codeguard-checks.md  incremento-3-designreviewer-analyzers.md  incremento-4-architectanalyst-mejoras.md
src/quality_agents/: __init__.py
src/quality_agents/architectanalyst/: __init__.py  agent.py  config.py  dashboard.py  formatter.py  metrics.py  models.py  orchestrator.py  snapshots.py  trends.py
src/quality_agents/architectanalyst/metrics/: __init__.py  _utils.py  abstractness_analyzer.py  (+9 more)
src/quality_agents/codeguard/: PLAN_IMPLEMENTACION.md  README.md  __init__.py  agent.py  checks.py  config.py  formatter.py  orchestrator.py
src/quality_agents/designreviewer/: __init__.py  agent.py  ai_integration.py  analyzers.py  config.py  formatter.py  models.py  orchestrator.py  reporters.py
src/quality_agents/shared/: __init__.py  config.py  reporting.py  verifiable.py
teoria/: README.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_architectanalyst_e2e.py  test_codeguard_e2e.py  test_designreviewer_e2e.py
tests/integration/: __init__.py  test_codeguard_integration.py  test_designreviewer_cli.py  test_pre_commit_hooks.py
tests/unit/: __init__.py  test_architectanalyst.py  test_architectanalyst_cli.py  test_architectanalyst_config.py  test_architectanalyst_coverage_analyzer.py  test_architectanalyst_distance_analysis_depth.py  test_architectanalyst_god_package.py  test_architectanalyst_instability_layer_roles.py  test_architectanalyst_metrics_fase2.py  test_architectanalyst_metrics_fase3.py  test_architectanalyst_models.py  test_architectanalyst_orchestrator.py  test_architectanalyst_relational_cohesion.py  test_architectanalyst_tendencias.py  test_codeguard.py  test_codeguard_config.py  test_codeguard_dead_code_check.py  test_codeguard_maintainability_check.py  test_codeguard_spelling_check.py  test_complexity_check.py  test_design_law_of_demeter_analyzer.py  test_design_primitive_obsession_analyzer.py  test_designreviewer.py  test_designreviewer_analyzers_acoplamiento.py  test_designreviewer_analyzers_cohesion_herencia.py  test_designreviewer_analyzers_smells.py  test_designreviewer_config.py  test_designreviewer_formatter.py  test_designreviewer_models.py  test_designreviewer_orchestrator.py  test_formatter.py  test_import_check.py  test_orchestrator.py  test_pep8_check.py  test_pylint_check.py  test_security_check.py  test_type_check.py  test_verifiable.py
(+25 files in other folders)
